styles/networkingWebApp.css
/* stylesheet for networkingWebApp.html */
body{
  background-color: #000;
}
#wrapper{
  display: grid;
  margin-left: 0vw;
  grid-template-columns: repeat(1, 1fr);
  grid-gap: 10px;
  grid-auto-rows: minmax(190px, auto);
  background-color: #999;
}
.header{
  position: fixed;
  margin-left: 25px;
  padding: 10px 0px 35px 0px;
  font-size: 92px;
  text-align: center;
  color: #3d4;
  grid-column: 1;
  grid-row: 1;
  width: 95vw;
  height: 100px;
  background-color: #333;
  z-index: 1;
}
.mainContainer{
  display: block;
  margin-left: 30px;
  padding-top: 20px;
  grid-column: 1;
  grid-row: 2;
  width: 55vw;
  height: 1000px;
  background-color: #67cc87;
  border: 5px double #333;
}
.ips{
  position: absolute;
  display: inline;
  padding: 10px;
  font-size: 32px;
}
#startIP{
  position: absolute;
  margin-top: 10px;
  margin-left: 250px;
  width: 300px;
  height: 32px;
}
.start{
  margin-top: 0vh;
  margin-left: 60px;
}
.broadcast{
  margin-top: 100px;
  margin-left: 65px;
}
#bCastIP{
  position: absolute;
  margin-top: 105px;
  margin-left: 250px;
  width: 300px;
  height: 32px;
}
.mask{
  margin-top: 200px;
  margin-left: 5px;
}
#masks{
  position: absolute;
  margin-top: 205px;
  margin-left: 250px;
  width: 300px;
  height: 32px;
}
.host{
  margin-top: 300px;
}
#hosts{
  position: absolute;
  margin-top: 305px;
  margin-left: 250px;
  width: 300px;
  height: 32px;
}
.btn{
  position: absolute;
  width: 100px;
  height: 35px;
}
#convertBtn{
  margin-top: 10px;
  margin-left: 600px;
  background-color: #f99;
  z-index: 1;
}
#convertBtn:hover{
  margin-top: 9px;
  margin-left: 597px;
  width: 105px;
  height: 37px;
  opacity: .85;
}
#subnetBtn{
  margin-top: 10px;
  margin-left: 710px;
  background-color: #9f9;
  z-index;
}
#subnetBtn:hover{
  margin-top: 9px;
  margin-left: 707px;
  width: 105px;
  height: 37px;
  opacity: .85;
}
#findMaskBtn{
  margin-top: 100px;
  margin-left: 600px;
}
#findRangeBtn{
  margin-top: 200px;
  margin-left: 600px;
}
#findHostBtn{
  margin-top: 300px;
  margin-left: 600px;
}
.info{
 position: absolute;
 margin-top: 400px;
 margin-left: 20px;
 width: 850px;
 height: 500px;
 background-color: #eee;
 border: 5px double #333;
}
.p1{
  margin-left: 10px;
}
.p2{
  margin-left: 10px;
}
.p3{
  margin-left: 10px;
}
.tooltip{
  position: absolute;
  margin-top: 30px;
  width: 250px;
  height: 30px;
  background-color: #eee;
  border: 3px double #fff;
}
.con{
  opacity: 0;
  z-index: 4;
}
.sub{
  opacity: 0;
  z-index: 4;
}
.btn:hover .con{
  opacity: .85;
}
.btn:hover .sub{
  opacity: .85;
}

